# ScaleAndSetSize

./: INSTALL  Makefile.am  README.md  README_GIMP_general_concepts.md  ScaleAndSetSizeObject.py  configure.ac  scaleAndSetSize.py
python/: Makefile.am  ScaleAndSetSizeObject.py  scaleAndSetSize.py
